# onnxruntime_flutter

./: .gitignore  CHANGELOG.md  GPU_ACCELERATION_GUIDE.md  README.md  pubspec.yaml
.claude/: settings.local.json
android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/gradle/wrapper/: gradle-wrapper.properties
example/lib/: vad_iterator.dart
ios/: onnxruntime.podspec
lib/src/: ort_isolate_session.dart  ort_provider.dart  ort_session.dart
lib/src/bindings/: bindings.dart
lib/src/providers/: ort_flags.dart
linux/: CMakeLists.txt
windows/: CMakeLists.txt
